add some hosts to ssh

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -1,14 +1,20 @@
 Host team
-    HostName tilde.team
-    port 22
-    User fosslinux
+    User        fosslinux
+    HostName    tilde.team
+    port        22
 
 Host team.lxd
-    User          fosslinux
-    HostName      fosslinux.lxd
-    ProxyJump team
+    User        fosslinux
+    HostName    fosslinux.lxd
+    port        22
+    ProxyJump   team
 
 Host your
-    HostName yourtilde.com
-    port 22
-    User fosslinux
+    User        fosslinux
+    HostName    yourtilde.com
+    port        22
+
+Host pi
+    User        styler
+    HostName    192.168.1.24
+    port        22
