remove weechat logs

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 oh-my-zsh/.oh-my-zsh/cache/.zsh-update
-libreoffice/.config/libreoffice/4/.lock
 oh-my-zsh/.oh-my-zsh/.git
+libreoffice/.config/libreoffice/4/.lock
+weechat/.weechat/logs
