--- a/vlc/.config/vlc/vlc-qt-interface.conf
+++ b/vlc/.config/vlc/vlc-qt-interface.conf
@@ -1,6 +1,6 @@
 [General]
 filedialog-path=@Variant(\0\0\0\x11\0\0\0\f/home/styler)
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x2\x91\0\0\x1\x17\0\0\x4\xe8\0\0\x2\xdf\0\0\x2\x91\0\0\x1<\0\0\x4\xe8\0\0\x2\xdf\0\0\0\0\0\0\0\0\a\x80)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\a\x80\0\0\x1\x17\0\0\t\xd7\0\0\x2\xba\0\0\a\x80\0\0\x1\x17\0\0\t\xd7\0\0\x2\xba\0\0\0\0\0\0\0\0\a\x80)
 
 [FullScreen]
 pos=@Point(0 0)
@@ -16,5 +16,5 @@ playlistSize=@Size(-1 -1)
 status-bar-visible=false
 
 [RecentsMRL]
-list=file:///home/styler/tilderadio-2019-01-18T00%3A56%3A48.mp3
-times=277564
+list=file:///tmp/mozilla_styler0/Basic_jazz_blues_progression_-_corrected_-_B._Plohr%2C_Sep_2018.mid, file:///tmp/mozilla_styler0/Twelve_bar_boogie-woogie_blues_in_C.mid, file:///tmp/mozilla_styler0/Standard_12-bar_blues_progression_variations_E.mid, file:///tmp/mozilla_styler0/Standard_12-bar_blues_progression_variations_C.mid, file:///tmp/mozilla_styler0/Standard_12-bar_blues_progression_variations_A-3.mid, file:///tmp/mozilla_styler0/Standard_12-bar_blues_progression_variations_A-2.mid, file:///home/styler/tilderadio-2019-01-18T00%3A56%3A48.mp3
+times=0, -1, 0, 0, 0, 0, 277564
