--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -23,3 +23,8 @@ Host cosmic
     User        fosslinux
     HostName    cosmic.voyage
     port        22
+
+Host aussie
+    User        fosslinux
+    HostName    aussies.space
+    port        22
