rewrite ssh config file for new ssh key system - pash

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -1,30 +1,77 @@
+Host aussie
+    User fosslinux
+    HostName aussies.space
+    Port 22 
+    IdentityFile ~/.ssh/aussie
+Host github
+    User git
+    HostName github.com
+    Port 22 
+    IdentityFile ~/.ssh/github
+
 Host team
-    User        fosslinux
-    HostName    tilde.team
-    port        22
+    User fosslinux
+    HostName tilde.team
+    Port 22 
+    IdentityFile ~/.ssh/team
 
-Host team.lxd
-    User        fosslinux
-    HostName    fosslinux.lxd
-    port        22
-    ProxyJump   team
-
-Host your
-    User        fosslinux
-    HostName    yourtilde.com
-    port        22
-
-Host pi
-    User        styler
-    HostName    192.168.1.24
-    port        22
+Host thunix
+    User fosslinux
+    HostName thunix.net
+    Port 22
+    IdentityFile ~/.ssh/thunix
 
 Host cosmic
-    User        fosslinux
-    HostName    cosmic.voyage
-    port        22
+    User fosslinux
+    HostName cosmic.voyage
+    Port 22
+    IdentityFile ~/.ssh/cosmic
 
-Host aussie
-    User        fosslinux
-    HostName    aussies.space
-    port        22
+Host black
+    User fosslinux
+    HostName tilde.black
+    Port 2222
+    IdentityFile ~/.ssh/black
+
+Host bsdteam
+    User fosslinux
+    HostName bsd.tilde.team
+    Port 22
+    IdentityFile ~/.ssh/bsdteam
+
+Host institute
+    User fosslinux
+    HostName tilde.institute
+    Port 22
+    IdentityFile ~/.ssh/institute
+
+Host red
+    User fosslinux
+    HostName tilde.red
+    Port 22
+    IdentityFile ~/.ssh/red
+
+Host pink
+    User fosslinux
+    HostName tilde.pink
+    Port 22
+    IdentityFile ~/.ssh/pink
+
+Host center
+    User fosslinux
+    HostName tilde.center
+    Port 22
+    IdentityFile ~/.ssh/center
+
+Host yourtilde
+    User fosslinux
+    HostName yourtilde.com
+    Port 22
+    IdentityFile ~/.ssh/yourtilde
+
+Host gooey
+    User fosslinux
+    HostName gooey.yourtilde.com
+    Port 22
+    IdentityFile ~/.ssh/gooey
+
