remove sensitive information

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -75,3 +75,8 @@ Host gooey
     Port 22
     IdentityFile ~/.ssh/gooey
 
+Host seanix
+    User fosslinux
+    HostName tilde-seanix.com
+    Port 22
+    IdentityFile ~/.ssh/seanix
