--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -80,3 +80,57 @@ Host seanix
     HostName tilde-seanix.com
     Port 22
     IdentityFile ~/.ssh/seanix
+
+Host town
+    User fosslinux
+    HostName tilde.town
+    Port 22
+    IdentityFile ~/.ssh/town
+
+Host pi
+    User styler
+    HostName 192.168.1.24
+    Port 22
+    IdentityFile ~/.ssh/pi
+
+Host ausvoid
+    User fosslinux
+    HostName 10.152.233.63
+    Port 22
+    IdentityFile ~/.ssh/ausvoid
+    ProxyJump aussie
+Host lxd-steam
+    User user
+    HostName 10.97.205.67
+    Port 22
+    IdentityFile ~/.ssh/lxd-steam
+
+Host minecraft-lxd-pi
+    User 10.92.174.32
+    HostName minecraft
+    Port 22
+    IdentityFile ~/.ssh/minecraft-lxd-pi
+
+Host dataforge
+    User fosslinux
+    HostName dataforge.tk
+    Port 22
+    IdentityFile ~/.ssh/dataforge
+Host pi-gitea
+    User gitea
+    HostName 192.168.1.24
+    Port 22
+    IdentityFile ~/.ssh/pi-gitea
+
+Host tilde-gitea
+    User git
+    HostName ttm.sh
+    Port 22
+    IdentityFile ~/.ssh/tilde-gitea
+
+Host aws
+    User admin
+    HostName ec2-52-63-1-106.ap-southeast-2.compute.amazonaws.com
+    Port 22
+    IdentityFile ~/.ssh/aws
+
